# parakeet

./: .env.example  CLAUDE.md  PLAN_SELECTION.md  README.md  main.py  pyproject.toml  requirements.txt
parakeet/: __init__.py  main.py
parakeet/cli/: __init__.py  chat.py  config_cmd.py  init_cmd.py  sessions_cmd.py
parakeet/core/: __init__.py  agent.py  bio_tools.py  config.py  environment.py  git_operations.py  multi_agent.py  pathway_analyzer.py  session.py  shell_session.py  tools.py
parakeet/core/agents/: README.md  __init__.py  base.py  bioinformatics.py  coding.py  orchestrator.py  research.py  testing.py
parakeet/ui/: __init__.py  console.py  plan_selector.py  spinner.py
tests/: __init__.py  conftest.py  test_agent.py  test_bio_tools.py  test_cli.py  test_config.py  test_environment.py  test_pathway_analyzer.py  test_tools.py
