[project]
name = "parakeet"
version = "0.1.0"
description = "AI agent that uses LLM models to execute coding tasks with tool support"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
parakeet = "main:main"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["main.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
