[project]
name = "parakeet"
version = "0.1.0"
description = "AI coding agent for biotech and robotics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
parakeet = "parakeet.main:app"

[dependency-groups]
dev = []

[tool.hatch.build.targets.wheel]
packages = ["parakeet"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
